--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://user:password@localhost:5432/nqueens_db
+DATABASE_URL=postgresql://user:password@postgres_db:5432/nqueens_db
