--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           python-version: 3.12
       - name: Install 
-        run: pip install requirements.txt
+        run: pip install -r requirements.txt
