--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,6 @@ jobs:
           python-version: 3.12
       - name: Install 
         run: pip install -r requirements.txt
+        
+      - name: build-app
+        run: uvicorn scr.main:app
